# ELSA

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKING_PLAN.md  CLAUDE.md  CLUSTERING.md  ELSA.md  GENOME_BROWSER_PLANNING.md  Makefile  PROGRESS.md  README.md  README_v2.md  REFACTOR.md  analyze_syntenic_blocks.py  analyze_syntenic_clusters.py  analyze_syntenic_landscape.py  config.yaml  debug_homology_integration.py  elsa.config.corrected.yaml  elsa.config.micro_only.yaml  elsa.config.small_blocks.yaml  elsa.config.yaml  elsa.config.yaml.backup  elsa_borg.config.yaml  environment.yml  fix_pfam_annotations.py  pyproject.toml  reorganize_test_data.py  requirements.txt  run_analysis.py  setup.py  test_enhanced_error_reporting.py  test_enhanced_homology_pipeline.py  test_integration.py  test_multiscale.py  test_pfam.sh  two_level_windowing.md
analysis_output/: high_quality_blocks.csv  large_blocks.csv  top_scoring_blocks.csv
bench/: README.md  elsa_synteny_benchmark.py
benchmarks/: CROSS_SPECIES_BENCHMARK_PLAN.md  OPERON_BENCHMARK_PLAN.md  ORTHOGROUP_GT_PLAN.md  PCA_NORMALIZATION_PLAN.md  README.md
configs/: _composed_control.yaml  _composed_control_strandcanon.yaml  elsa_bidirectional.yaml  elsa_bidirectional_test.yaml  elsa_cluster_control.yaml  elsa_cluster_control_with_attach.yaml  elsa_cluster_icws.yaml  elsa_cluster_icws_degcap25.yaml  elsa_cluster_icws_dfmax1200.yaml  elsa_cluster_icws_dfmax800.yaml  elsa_cluster_icws_lowtau.yaml  elsa_cluster_icws_noskip.yaml  elsa_cluster_icws_noskip_dfmax800_degcap25.yaml  elsa_cluster_icws_strict.yaml  elsa_cluster_nonhybrid_compact_strict.yaml  elsa_cluster_nonhybrid_targeted.yaml  elsa_cluster_xor_bands64.yaml  elsa_micro_aligned.yaml  elsa_micro_baseline.yaml  elsa_micro_strict.yaml  elsa_small_k1_strict.yaml
docs/: ARCHITECTURE.md  CONFIG.md  ELSA_PHASE2_PLAN.md  GPT5_SYNTENIC_ANALYSIS.md  HNSW_CANDIDATE_DISCOVERY_PLAN.md  HOMOLOGY_ANALYSIS_PLAN.md  SHARUR_INTEGRATION.md
elsa/: __init__.py  _log.py  adapter.py  analysis.py  browser.py  chain.py  cli.py  cluster.py  embeddings.py  index.py  indexing.py  ingest.py  manifest.py  metadata.py  params.py  pfam_annotation.py  projection.py  (+5 more)
elsa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+236 files in other folders)
