[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elsa"
version = "2.0.0"
description = "Embedding Locus Search and Alignment — syntenic block discovery from protein language model embeddings"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "ELSA Team"}]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn",
    "numpy",
    "pandas",
    "pyarrow",
    "biopython",
    "click",
    "rich",
    "pydantic>=2.0",
    "pyyaml",
    "fair-esm",
    "faiss-cpu",
    "hnswlib",
    "joblib",
    "tqdm",
]

[project.scripts]
elsa = "elsa.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "mypy",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["elsa*"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
